[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvault"
version = "0.1.0"
description = "A CashTokens wallet and CLI for autonomous AI agents on Bitcoin Cash"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Dirk Jenkins & Agent Erin" }
]
keywords = ["bitcoin-cash", "bch", "cashtokens", "nft", "wallet", "ai-agents", "headless"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.10"
dependencies = [
    "bitcash>=1.1.0",
    "cryptography>=41.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "mnemonic>=0.20",
    "base58>=2.1.0",
    "coincurve>=20.0.0",
]

[project.scripts]
agentvault = "agentvault.cli:main"

[project.urls]
Homepage = "https://github.com/[org]/agentvault"
Documentation = "https://github.com/[org]/agentvault#readme"
Repository = "https://github.com/[org]/agentvault"
Issues = "https://github.com/[org]/agentvault/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentvault*"]
